fix: removed all urls and ips from code and moved urls to env variables

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
-    <a href="https://vakyansh.in">
+    <a href="/">
         <img src="ekstep-logo.svg" style="width:3rem" alt="Ek Step Logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
