--- a/views/index.ejs
+++ b/views/index.ejs
@@ -365,9 +365,11 @@
             init variables
         */
         let ENABLE_LOGS = false;
-        let languagesMap = <%- JSON.stringify(languages_map) %>;
+        let languagesMap = JSON.parse(`<%- JSON.stringify(languages_map) %>`);
+        let ASR_BASE_URL = `<%- ASR_BASE_URL %>`;
+        let openAPIProxyURL = `<%- open_api_proxy_url %>`;
         let socket, socket_close_timeout = null, fileSocket, micSocketIO, fileSocketIO;
-        let current_lang = 'en-IN', selected_lang = 'en-IN';
+        let current_lang = 'en', selected_lang = 'en';
         let bufferSize = 16384;
         let sentOnce = true;
         let state = "OFF";
@@ -387,7 +389,7 @@
         */
         function fetchCurrentLanguageCode(language) {
             language = language.toLowerCase();
-            let languageCode = "en-IN";
+            let languageCode = "en";
             for(let ind in languagesMap){
                 if(languagesMap[ind].id === language){
                     languageCode = languagesMap[ind].code;
@@ -610,7 +612,7 @@
         }
 
         function connectSocket(startMic) {
-            socket = io('/', {autoConnect: false , query: `language=${current_lang}`, transports: [ "websocket", "polling"] });
+            socket = io(openAPIProxyURL, {autoConnect: false , query: `language=${current_lang}`, transports: [ "websocket", "polling"] });
             socket.connect();
             socket.on('connect', function () {
                 userId = socket.id;
@@ -623,7 +625,7 @@
                 document.getElementById('userid').innerHTML = "";
             });
             socket.on('response', function (data, language) {
-                if (language === "en-IN") data = data.toLowerCase();
+                if (language == "en") data = data.toLowerCase();
                 document.getElementById('output').textContent = data;
                 transcription_text = data;
                 transcription_language = language;
@@ -1039,7 +1041,7 @@
             let base64String = await blobToData(blob);
             base64String = base64String.substr(base64String.indexOf('base64,') + 7);
             $('#file-loader').show();
-            let url = `https://meity-dev-asr.ulcacontrib.org/asr/v1/recognize/${current_lang}`;
+            let url = `${ASR_BASE_URL}/asr/v1/recognize/${current_lang}`;
             fetch(url, {
                 method: 'POST',
                 body: JSON.stringify({
