--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -21,12 +21,12 @@
                     <p class="lead">Page Not Found</p>
                     <hr class="my-4">
                     <p>Looks like you have taken a wrong turn here</p>
-                    <p class="lead"><a class="" href="https://vakyansh.in/">Click Here</a> to go back to home page</p>
+                    <p class="lead"><a class="" href="/">Click Here</a> to go back to home page</p>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="fixed-bottom bg-light pt-3 border-top mt-lg-2 w-100">
+    <!-- <footer class="fixed-bottom bg-light pt-3 border-top mt-lg-2 w-100">
         <div class="container-fluid">
             <div
                 class="d-flex flex-column-reverse flex-lg-row justify-content-lg-around align-items-sm-center align-items-md-center text-center">
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
